# coursework

cpe3020/: README.md
cpe3020/designs/: adder.vhd  adder_tb.vhd  and_gate.vhd  and_tb.vhd  basys3-master.xdc  gameshow.vhd  or_gate.vhd  run.sh  slvectortb.vhd
cpe3020/lab1/: README.md
cpe3020/lab2/: README.md
cpe3020/lab3/: README.md
cpe3020/lab4/: README.md
cpe3020/lab5/: README.md
cpe3020/project/: README.md
cs3305/: README.md
cs3305/hw1/: example_17.cpp  example_19.cpp  problem_11.cpp  problem_16.cpp  problem_19.cpp
cs3305/hw2/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
cs3305/hw3/: problem_23.cpp
cs3305/lab1/: main.cpp
cs3305/lab10/: lab10.cpp
cs3305/lab11/: bintree.h  main.cpp
cs3305/lab12/: main.cpp
cs3305/lab13/: main.cpp  table1.h  table1.template  table_q.h  table_q.template
cs3305/lab2/: statexam.cpp  stats.cpp  stats.h
cs3305/lab3/: stats2.cpp  stats2.h
cs3305/lab4/: set.cpp  test_set.cpp
cs3305/lab5/: sequence2.cpp  sequence_exam2.cpp
cs3305/lab6/: sequence3.cpp
cs3305/lab7/: bag3.cpp  bag3.h  bag_diff3.cpp  check_lists.cpp  check_lists.h  main.cpp
cs3305/lab8/: bag5.h  bag5.hxx  lab8.cpp
cs3305/lab9/: stack_pair.h  stack_pair.template  testCopy.cpp
cs5040/: .gitignore  README.md
cs5040/hw1/: AverageGrade.java  StarPattern.java  Vowels.java
cs5040/hw2/: LinkedList.java
cs5040/hw4/: build.gradle  settings.gradle
cs6041/: flake.nix  pyproject.toml
cs6041/scripts/: hw2.py
cs6041/tex/: .gitignore  hw1.tex  hw2.tex  test2.tex
cs6041/tex/assets/: dfa_1.aux  dfa_1.tex  dfa_5a.aux  dfa_5a.tex  dfa_5b.aux  dfa_5b.tex  dfa_5c.aux  dfa_5c.tex
cs6041/tex/macros/: macros.tex
cs7267/: README.md
cs7347/: README.md  flake.nix  pyproject.toml
cs7347/scripts/: hw1.py  hw2.py  test1.py  test2.py
cs7347/tex/: .gitignore  hw1.tex  hw2.tex  hw3.tex  test1.tex  test2.tex
cs7347/tex/assets/hw1/: bigram.tex  edit_dist.tex  edit_dist_bt.tex  edit_dist_bt_left.tex  edit_dist_bt_right.tex  unigram.tex
cs7347/tex/assets/hw2/: tf_idf.tex
cs7347/tex/assets/test1/: 6b.tex  6c.tex  bi_joint.tex  bigram.tex  uni_joint.tex  unigram.tex
cs7357/: .envrc  README.md  flake.nix  pyproject.toml
cs7357/assignment/hw1/: hw1.py  notebook.ipynb  temp.py
cs7357/assignment/hw2/: HPA2.docx  hw2.py  neuralnet.jl  notebook.ipynb  notebook.jl
cs7357/assignment/hw3/: HPA3.docx  notebook.ipynb
cs7357/assignment/test1/: notebook.jl
cs7357/assignment/test2/: notebook.ipynb
cs7357/hw1/: pyproject.toml  weather_data.csv
cs7357/tex/: .gitignore  h2.tex  hw1.tex  hw2.tex  hw3.tex  test1.tex  test2.tex
cs7375/: README.md
(+75 files in other folders)
