[tool.poetry]
name = "cs7357"
version = "0.1.0"
description = ""
authors = ["ngngardner <ngngardner@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "^1.11.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
keras = "^2.8.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
