[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
ipykernel = "^6.7.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
